--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "Video Chat between 2 people using simple-peer",
   "main": "main.js",
   "scripts": {
-    "start": "node index.html",
+    "start": "node main,js",
     "watch": "npx watchify ./public/main.js -o ./public/bundle.js"
   },
-  "author": "Vinayak Sinha",
   "dependencies": {
     "express": "^4.16.4",
     "simple-peer": "^9.2.1",
